# reapp_ros-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
action/: Execute.action
debian/: changelog  control  gbp.conf  rules
msg/: RecognitionResult2D.msg
reapp_description/urdf/: box.urdf.xacro
reapp_msgs/: CMakeLists.txt
reapp_msgs/action/: Solder.action
reapp_msgs/msg/: RfidTag.msg  RfidTags.msg
reapp_msgs/srv/: DetectObjects.srv  ReceivePoseStamped.srv
rpm/: template.spec
srdf/: chain.srdf.xacro  empty.srdf.xacro
srv/: ChangeReferenceObject.srv  GetCartesianTrajectory.srv
urdf/: attach.urdf.xacro  empty.urdf.xacro  link.urdf.xacro  mesh.urdf.xacro
