<package format="2">
  <name>reapp_msgs</name>
  <version>0.1.1</version>
  <description>
    Common messages definitions for ReApp
  </description>
  <maintainer email="Mathiass.Luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>

  <license>LGPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

</package>
